Refs #8657; fixed fullBg function for backgrounds; removed loading of list items from whatsnew_gallery for videopage; made the coverflow react to clicks closer toward the handler, added move icon for coverflow handler; fixed behavior of ff clicking of faceted links

--- a/trunk/eea.mediacentre/branches/plone4/src/eea/mediacentre/skins/eea_multimedia/coverflow/css/demos.css
+++ b/trunk/eea.mediacentre/branches/plone4/src/eea/mediacentre/skins/eea_multimedia/coverflow/css/demos.css
@@ -56,6 +56,9 @@ div.wrapper {
 	background: transparent url("++resource++js/ContentFlow/img/scrollbar.png") repeat-x scroll top center !important;
 	height: 5px !important;
 	border: none !important;
+    cursor: move;
+    /* padding: 30px 0px; */
+
 }
 
 .ui-selected {
@@ -135,7 +138,7 @@ div.wrapper {
 	     -o-border-radius: 0;
 	        border-radius: 0;
 	background: url("++resource++js/ContentFlow/img/slider.png") no-repeat scroll 0 -23px transparent !important;
-	cursor: pointer;
+	cursor: move;
 	height: 22px;
 	width: 22px;
 	top: -8px;
