--- a/trunk/eea.mediacentre/branches/plone4/src/eea/mediacentre/skins/eea_multimedia/eea.multimedia.css
+++ b/trunk/eea.mediacentre/branches/plone4/src/eea/mediacentre/skins/eea_multimedia/eea.multimedia.css
@@ -105,6 +105,7 @@ h2#player-title,
 #bottomright-widgets #faceted-form #tag-cloud ul.tags-cloud li,
 #bottomright-widgets #faceted-form #tag-cloud ul.tags-cloud li a {
     color: #FFFFFF !important;
+    display: inline;
 }
 
 #bottom-widgets {
